# GoldWorm

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark_results.txt  chat.sh  download_datasets.sh  gen_vocab.ps1  webui.py
benchmark_results/: stats_projection.json  stats_synaptic.json  summary.txt  tuning_report.json
src/: bridge.rs  criticality.rs  geometry.rs  gpu.rs  hippocampus.rs  lib.rs  memory.rs  neuron.rs  observation.rs  storage.rs  tda.rs  training.rs  worm_brain.rs
static/: goldworm_gui.html
tests/: activation_sequence_test.rs  audit_boltzmann.rs  audit_gpu_activation.rs  audit_input_integrity.rs  dendritic_end_to_end_test.rs  dual_stream_hippocampus_test.rs  gpu_sanity_check.rs  integration_test.rs  mini_seed_test.rs
